add html features

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 p{
     color: #86652a;
+    /*background-image: url("../asset/test.jpg");*/
 }
 
-html{
+body{
     background-color: aliceblue;
 }
